--- a/account/forgot_password.html
+++ b/account/forgot_password.html
@@ -88,7 +88,7 @@
                                             aria-describedby="forgot-password-email-InputField-help" value=""></div>
                                       </div>
                                     </label></div>
-                                  <div class="place__recommended-no"></div>
+                                  <div class="mt-2"></div>
                                 </div>
                                 <div>
                                   <div class="auth-container__form-email-field-wrapper"><label class="auth-container__form-email-label" for="forgot-password-email">
@@ -103,7 +103,7 @@
                                             aria-invalid="true"></div>
                                       </div>
                                     </label></div>
-                                  <div class="place__recommended-no">
+                                  <div class="mt-2">
                                     <div class="products-container__alert-warning-date-text" id="forgot-password-email-InputField-help"
                                       data-testid="forgot-password-email-InputField-help-error"><span
                                         style="margin-right: 4px;"><svg viewBox="0 0 16 16"
@@ -345,7 +345,7 @@
                                             aria-describedby="forgot-password-email-InputField-help" value=""></div>
                                       </div>
                                     </label></div>
-                                  <div class="place__recommended-no"></div>
+                                  <div class="mt-2"></div>
                                 </div>
                                 <div>
                                   <div class="auth-container__form-email-field-wrapper"><label class="auth-container__form-email-label" for="forgot-password-email">
@@ -360,7 +360,7 @@
                                             aria-invalid="true"></div>
                                       </div>
                                     </label></div>
-                                  <div class="place__recommended-no">
+                                  <div class="mt-2">
                                     <div class="products-container__alert-warning-date-text" id="forgot-password-email-InputField-help"
                                       data-testid="forgot-password-email-InputField-help-error"><span
                                         style="margin-right: 4px;"><svg viewBox="0 0 16 16"
