--- a/account/signup_login.html
+++ b/account/signup_login.html
@@ -1222,7 +1222,7 @@
                                           </div>
                                         </div>
                                       </div>
-                                      <div class="contact-host__textarea-container">
+                                      <div class="mt-2">
                                         <div
                                           class="products-container__alert-warning-date-text"
                                           id="phone-number-error-phoneNumber"
@@ -1365,7 +1365,7 @@
                                           </div>
                                         </label>
                                       </div>
-                                      <div class="place__recommended-no"></div>
+                                      <div class="mt-2"></div>
                                     </div>
                                     <div>
                                       <div class="auth-container__form-email-field-wrapper">
@@ -1396,7 +1396,7 @@
                                           </div>
                                         </label>
                                       </div>
-                                      <div class="place__recommended-no">
+                                      <div class="mt-2">
                                         <div
                                           class="products-container__alert-warning-date-text"
                                           id="email-login-email-InputField-help"
@@ -2262,7 +2262,7 @@
                                             </div>
                                           </div>
                                         </div>
-                                        <div class="place__recommended-no"></div>
+                                        <div class="mt-2"></div>
                                       </div>
                                       <div>
                                         <div class="auth-container__form-email-field-wrapper"><label class="auth-container__form-email-label" for="email-signup-password">
@@ -2284,7 +2284,7 @@
                                             </div>
                                           </div>
                                         </div>
-                                        <div class="place__recommended-no">
+                                        <div class="mt-2">
                                           <div class="products-container__alert-warning-date-text" id="email-signup-password-InputField-help"
                                             data-testid="email-signup-password-InputField-help-error"><span
                                               style="margin-right: 4px;"><svg viewBox="0 0 16 16"
@@ -2876,7 +2876,7 @@
                                             </div>
                                           </div>
                                         </div>
-                                        <div class="place__recommended-no">
+                                        <div class="mt-2">
                                           <div class="products-container__alert-warning-date-text" id="error-text">
                                             <span style="margin-right: 4px"
                                               ><svg
@@ -2930,7 +2930,7 @@
                                               </div>
                                             </label>
                                           </div>
-                                          <div class="place__recommended-no">
+                                          <div class="mt-2">
                                             <div
                                               class="description-textarea__help"
                                               id="email-signup-email-InputField-help"
@@ -2971,7 +2971,7 @@
                                               </div>
                                             </label>
                                           </div>
-                                          <div class="place__recommended-no">
+                                          <div class="mt-2">
                                             <div
                                               class="products-container__alert-warning-date-text"
                                               id="email-signup-email-InputField-help"
@@ -3040,7 +3040,7 @@
                                               </div>
                                             </div>
                                           </div>
-                                          <div class="place__recommended-no"></div>
+                                          <div class="mt-2"></div>
                                         </div>
                                         <div>
                                           <div class="auth-container__form-email-field-wrapper">
@@ -3087,7 +3087,7 @@
                                         </div>
                                         <div
                                           data-testid="password-rules-indicator"
-                                          class="place__recommended-no"
+                                          class="mt-2"
                                           aria-live="polite"
                                           aria-atomic="true"
                                         >
@@ -4602,7 +4602,7 @@
                                         </div>
                                       </div>
                                     </div>
-                                    <div class="contact-host__textarea-container">
+                                    <div class="mt-2">
                                       <div
                                         class="products-container__alert-warning-date-text"
                                         id="phone-number-error-phoneNumber"
@@ -4760,7 +4760,7 @@
                                         </div>
                                       </label>
                                     </div>
-                                    <div class="place__recommended-no"></div>
+                                    <div class="mt-2"></div>
                                   </div>
                                   <div>
                                     <div class="auth-container__form-email-field-wrapper">
@@ -4791,7 +4791,7 @@
                                         </div>
                                       </label>
                                     </div>
-                                    <div class="place__recommended-no">
+                                    <div class="mt-2">
                                       <div
                                         class="products-container__alert-warning-date-text"
                                         id="email-login-email-InputField-help"
@@ -5646,7 +5646,7 @@
                                           </div>
                                         </div>
                                       </div>
-                                      <div class="place__recommended-no"></div>
+                                      <div class="mt-2"></div>
                                     </div>
                                     <div>
                                       <div class="auth-container__form-email-field-wrapper"><label class="auth-container__form-email-label" for="email-signup-password">
@@ -5667,7 +5667,7 @@
                                           </div>
                                         </div>
                                       </div>
-                                      <div class="place__recommended-no">
+                                      <div class="mt-2">
                                         <div class="products-container__alert-warning-date-text" id="email-signup-password-InputField-help"
                                           data-testid="email-signup-password-InputField-help-error"><span
                                             style="margin-right: 4px;"><svg viewBox="0 0 16 16"
@@ -6254,7 +6254,7 @@
                                           </div>
                                         </div>
                                       </div>
-                                      <div class="place__recommended-no">
+                                      <div class="mt-2">
                                         <div class="products-container__alert-warning-date-text" id="error-text">
                                           <span style="margin-right: 4px"
                                             ><svg
@@ -6306,7 +6306,7 @@
                                             </div>
                                           </label>
                                         </div>
-                                        <div class="place__recommended-no">
+                                        <div class="mt-2">
                                           <div
                                             class="description-textarea__help"
                                             id="email-signup-email-InputField-help"
@@ -6345,7 +6345,7 @@
                                             </div>
                                           </label>
                                         </div>
-                                        <div class="place__recommended-no">
+                                        <div class="mt-2">
                                           <div
                                             class="products-container__alert-warning-date-text"
                                             id="email-signup-email-InputField-help"
@@ -6414,7 +6414,7 @@
                                             </div>
                                           </div>
                                         </div>
-                                        <div class="place__recommended-no"></div>
+                                        <div class="mt-2"></div>
                                       </div>
                                       <div>
                                         <div class="auth-container__form-email-field-wrapper">
@@ -6461,7 +6461,7 @@
                                       </div>
                                       <div
                                         data-testid="password-rules-indicator"
-                                        class="place__recommended-no"
+                                        class="mt-2"
                                         aria-live="polite"
                                         aria-atomic="true"
                                       >
