--- a/edit/GuestReq.html
+++ b/edit/GuestReq.html
@@ -601,7 +601,7 @@
                                                 </svg>
                                               </div>
                                             </div>
-                                            <div class="_4l12l8">
+                                            <div class="mt-2">
                                               <div
                                                 class="_pxnjg"
                                                 id="MINIMUM_AGE-helptext"
@@ -1087,7 +1087,7 @@
                                                   (optional)
                                                 </div>
                                               </div>
-                                              <div class="_4l12l8">
+                                              <div class="mt-2">
                                                 <div class="_1aoj0ap">
                                                   <div dir="ltr">
                                                     <textarea
@@ -1370,7 +1370,7 @@ Guests should know how to fry food and also bring boiled eggs.</textarea
                                           </div>
                                         </div>
                                         <div
-                                          class="contact-host__textarea-container"
+                                          class="mt-2"
                                         >
                                           <div
                                             class="description-textarea__help"
@@ -1887,7 +1887,7 @@ Guests should know how to fry food and also bring boiled eggs.</textarea
                                             </div>
                                           </div>
                                           <div
-                                            class="contact-host__textarea-container"
+                                            class="mt-2"
                                           >
                                             <div
                                               class="contact-host__textarea-wrapper"
