--- a/edit/photos.html
+++ b/edit/photos.html
@@ -3484,7 +3484,7 @@
                <div class="_13wkz77">
                 <label for="captionTextArea">
                  <div class="_1wgf3yo">Caption</div>
-                 <div class="_4l12l8">
+                 <div class="mt-2">
                   <div class="_1aoj0ap">
                    <div dir="ltr"><textarea maxlength="250" name="captionTextArea" rows="6" class="_159914b" autocomplete="off" id="captionTextArea"></textarea></div>
                   </div>
