--- a/edit/what.html
+++ b/edit/what.html
@@ -494,7 +494,7 @@
                                                 own
                                               </li>
                                             </ul>
-                                            <div class="contact-host__textarea-containerv">
+                                            <div class="mt-2v">
                                               <div class="_1aoj0ap">
                                                 <div dir="ltr">
                                                   <textarea
@@ -722,7 +722,7 @@ Join me in this fun and easy cooking experience where you will learn techniques 
                                                     </svg>
                                                   </div>
                                                 </div>
-                                                <div class="place__recommended-no">
+                                                <div class="mt-2">
                                                   <div
                                                     class="_pxnjg"
                                                     id="DURATION-InputField-help"
@@ -1074,7 +1074,7 @@ Join me in this fun and easy cooking experience where you will learn techniques 
                                           </li>
                                         </ul>
                                         <div
-                                          class="contact-host__textarea-container"
+                                          class="mt-2"
                                         >
                                           <div
                                             class="contact-host__textarea-wrapper"
@@ -1309,7 +1309,7 @@ Join me in this fun and easy cooking experience where you will learn techniques 
                                                 </svg>
                                               </div>
                                             </div>
-                                            <div class="place__recommended-no">
+                                            <div class="mt-2">
                                               <div
                                                 class="description-textarea__help"
                                                 id="DURATION-InputField-help"
