--- a/help/feedback.html
+++ b/help/feedback.html
@@ -515,7 +515,7 @@
                             <div class="fuzmsn8 dir dir-ltr hidden">
                               <label for="textarea_feedback"
                                 ><div class="_1wgf3yo">Add details</div>
-                                <div class="_4l12l8">
+                                <div class="mt-2">
                                   <div class="_1aoj0ap">
                                     <div dir="ltr">
                                       <textarea
