--- a/listings-product/gift.html
+++ b/listings-product/gift.html
@@ -254,7 +254,7 @@
                                               </div>
                                             </label>
                                           </div>
-                                          <div class="place__recommended-no"></div>
+                                          <div class="mt-2"></div>
                                         </div>
                                         <div class="fd6gab5 g1aixd53 dir dir-ltr">
                                           By redeeming, you agree to the
