--- a/listings-product/places.html
+++ b/listings-product/places.html
@@ -13586,7 +13586,7 @@
                                                   >
                                                 </div>
                                                 <div class="place__recommended-spacer"></div>
-                                                <div class="place__recommended-no">
+                                                <div class="mt-2">
                                                   <ul class="place__recommended-no-ul">
                                                     <li class="place__recommended-no-li">
                                                       <div class="place__recommended-no-li">
@@ -13813,7 +13813,7 @@
                                                   >
                                                 </div>
                                                 <div class="place__recommended-spacer"></div>
-                                                <div class="place__recommended-no">
+                                                <div class="mt-2">
                                                   <ul class="place__recommended-no-ul">
                                                     <li class="place__recommended-no-li">
                                                       <div class="place__recommended-no-li">
@@ -14040,7 +14040,7 @@
                                                   >
                                                 </div>
                                                 <div class="place__recommended-spacer"></div>
-                                                <div class="place__recommended-no">
+                                                <div class="mt-2">
                                                   <ul class="place__recommended-no-ul">
                                                     <li class="place__recommended-no-li">
                                                       <div class="place__recommended-no-li">
@@ -14244,7 +14244,7 @@
                                                   >
                                                 </div>
                                                 <div class="place__recommended-spacer"></div>
-                                                <div class="place__recommended-no">
+                                                <div class="mt-2">
                                                   <ul class="place__recommended-no-ul">
                                                     <li class="place__recommended-no-li">
                                                       <div class="place__recommended-no-li">
