--- a/listings-product/products-luxe.html
+++ b/listings-product/products-luxe.html
@@ -12184,7 +12184,7 @@
                                                                 </span>
                                                               </div>
                                                             </div>
-                                                            <div class="place__recommended-no">
+                                                            <div class="mt-2">
                                                               <span class="_1y9gwt75"><span
                                                                   class="products-container__mb-footer-rate-star" style="
                                                                       font-size: 12px;
@@ -24342,7 +24342,7 @@
                             <div class="_1ryugux">
                               <label for="message">
                                 <div class="_1wgf3yo">Your message</div>
-                                <div class="_4l12l8">
+                                <div class="mt-2">
                                   <div class="_1aoj0ap">
                                     <div dir="ltr">
                                       <textarea name="message" maxlength="4000" rows="4" class="_159914b"
