--- a/listings-product/products-plus.html
+++ b/listings-product/products-plus.html
@@ -11060,7 +11060,7 @@
                                                                 </span>
                                                               </div>
                                                             </div>
-                                                            <div class="place__recommended-no">
+                                                            <div class="mt-2">
                                                               <span class="_1y9gwt75"><span
                                                                   class="products-container__mb-footer-rate-star" style="
                                                                       font-size: 12px;
