--- a/listings-product/wishlist.html
+++ b/listings-product/wishlist.html
@@ -6851,7 +6851,7 @@
                                 </button></div>
                             </div>
                           </div>
-                          <div class="_4l12l8">As a reminder, anyone with the link can view this wishlist. <a target="_blank"
+                          <div class="mt-2">As a reminder, anyone with the link can view this wishlist. <a target="_blank"
                               href="/help/article/1236/how-do-i-manage-my-list-of-saved-homes" class="_1sikdxcl">Learn more</a>
                           </div>
                         </section>
@@ -7049,7 +7049,7 @@
                                 </button></div>
                             </div>
                           </div>
-                          <div class="_4l12l8">Once you share this link, anyone can view your wishlist. <a target="_blank"
+                          <div class="mt-2">Once you share this link, anyone can view your wishlist. <a target="_blank"
                               href="/help/article/1236/how-do-i-manage-my-list-of-saved-homes" class="_1sikdxcl">Learn more</a></div>
                         </section>
                       </div>
@@ -7145,7 +7145,7 @@
           </div>
         </label>
       </div>
-      <div class="_klarpw">
+      <div class="mt-2">
         <div
           class="_pxnjg"
           id="wishlists.ListSettings.wishlist_name-InputField-help"
