--- a/loaders/products-loader.html
+++ b/loaders/products-loader.html
@@ -3578,7 +3578,7 @@
                                                                 </div>
                                                               </div>
                                                               <div
-                                                                class="place__recommended-no"
+                                                                class="mt-2"
                                                               >
                                                                 <span
                                                                   class="_1y9gwt75"
