--- a/payments/payment-methods.html
+++ b/payments/payment-methods.html
@@ -2353,7 +2353,7 @@
                           </div>
                         </label>
                       </div>
-                      <div class="contact-host__textarea-container">
+                      <div class="mt-2">
                         <div class="products-container__alert-warning-date-text" id="credit-card-zip-error">
                           <span style="margin-right: 4px"
                             ><svg
