--- a/payments/payment.html
+++ b/payments/payment.html
@@ -902,7 +902,7 @@
                                                           to the same payment
                                                           method on Oct 9, 2022.
                                                           No extra fees.
-                                                          <div class="_klarpw">
+                                                          <div class="mt-2">
                                                             <button
                                                               aria-label="Learn more about Pay Less Up Front"
                                                               type="button"
@@ -1625,7 +1625,7 @@
                                                             </label>
                                                           </div>
                                                           <div
-                                                            class="place__recommended-no"
+                                                            class="mt-2"
                                                           ></div>
                                                           <div
                                                             class="spinner-chart__input-price"
@@ -3860,7 +3860,7 @@
                                                           24, 2022. No extra
                                                           fees.
                                                           <div
-                                                            class="place__recommended-no"
+                                                            class="mt-2"
                                                           >
                                                             <button
                                                               aria-label="Learn more about Pay Less Up Front"
@@ -4509,7 +4509,7 @@
                                                   </div>
                                                 </div>
                                                 <div>
-                                                  <div class="_4l12l8 hidden">
+                                                  <div class="mt-2 hidden">
                                                     <div class="_88xxct">
                                                       <div class="mt-4">
                                                         <div class="_clw8y6">
@@ -4600,7 +4600,7 @@
                                                           </label>
                                                         </div>
                                                         <div
-                                                          class="contact-host__textarea-container"
+                                                          class="mt-2"
                                                         >
                                                           <div
                                                             class="products-container__alert-warning-date-text"
@@ -5145,7 +5145,7 @@
                                                               </label>
                                                             </div>
                                                             <div
-                                                              class="place__recommended-no"
+                                                              class="mt-2"
                                                             ></div>
                                                             <div
                                                               class="spinner-chart__input-price"
@@ -7640,7 +7640,7 @@
                           </div>
                         </label>
                       </div>
-                      <div class="contact-host__textarea-container">
+                      <div class="mt-2">
                         <div
                           class="products-container__alert-warning-date-text"
                           id="credit-card-zip-error"
@@ -11112,7 +11112,7 @@ Thank you very much and we hope you enjoy your stay!</div>
                           </div>
                         </div>
                       </div>
-                      <div class="_klarpw">
+                      <div class="mt-2">
                         <div class="_pxnjg" id="phone-input-help">We'll text you a code to confirm your number. Standard
                           message and data rates apply.</div>
                       </div>
