--- a/payments/resolutions_2.html
+++ b/payments/resolutions_2.html
@@ -324,7 +324,7 @@
                             >Let them know why you’re sending money.</span
                           >
                         </div>
-                        <div class="contact-host__textarea-container">
+                        <div class="mt-2">
                           <div class="contact-host__textarea-wrapper">
                             <div dir="ltr">
                               <textarea
