--- a/reviews/reviews.html
+++ b/reviews/reviews.html
@@ -1288,7 +1288,7 @@
                                   ><div class="textarea-label-wrapper">
                                     Write a public review for future guests
                                   </div>
-                                  <div class="contact-host__textarea-container">
+                                  <div class="mt-2">
                                     <div class="contact-host__textarea-wrapper">
                                       <div dir="ltr">
                                         <textarea
@@ -1309,7 +1309,7 @@
                                   ><div class="textarea-label-wrapper">
                                     Write a private note to Jose Angelo
                                   </div>
-                                  <div class="contact-host__textarea-container">
+                                  <div class="mt-2">
                                     <div class="contact-host__textarea-wrapper">
                                       <div dir="ltr">
                                         <textarea
