--- a/submission/GeneralV.html
+++ b/submission/GeneralV.html
@@ -1159,7 +1159,7 @@
                                       When are you typically available to host?
                                     </div>
                                   </legend>
-                                  <div class="place__recommended-no">
+                                  <div class="mt-2">
                                     <label
                                       for="info_available_date_to_host-Weekdays"
                                       class="flex"
@@ -1179,7 +1179,7 @@
                                       ></label
                                     >
                                   </div>
-                                  <div class="place__recommended-no">
+                                  <div class="mt-2">
                                     <label
                                       for="info_available_date_to_host-Weekends"
                                       class="flex"
@@ -1198,7 +1198,7 @@
                                       ></label
                                     >
                                   </div>
-                                  <div class="place__recommended-no">
+                                  <div class="mt-2">
                                     <label
                                       for="info_available_date_to_host-Both weekdays and weekends"
                                       class="flex"
@@ -1217,7 +1217,7 @@
                                       ></label
                                     >
                                   </div>
-                                  <div class="place__recommended-no">
+                                  <div class="mt-2">
                                     <label
                                       for="info_available_date_to_host-I don’t know yet"
                                       class="flex"
