--- a/submission/basic.html
+++ b/submission/basic.html
@@ -1237,7 +1237,7 @@
                                     </div>
                                    </label>
                                   </div>
-                                  <div class="_klarpw"></div>
+                                  <div class="mt-2"></div>
                                  </div>
                               </fieldset>
                             </div>
