--- a/submission/etd.html
+++ b/submission/etd.html
@@ -1108,7 +1108,7 @@
                                         experience?
                                       </div>
                                     </legend>
-                                    <div class="place__recommended-no">
+                                    <div class="mt-2">
                                       <label
                                         for="info_score_educate_about_animals-Yes"
                                         class="flex"
@@ -1126,7 +1126,7 @@
                                         ></label
                                       >
                                     </div>
-                                    <div class="place__recommended-no">
+                                    <div class="mt-2">
                                       <label
                                         for="info_score_educate_about_animals-No"
                                         class="flex"
