--- a/submission/wwd.html
+++ b/submission/wwd.html
@@ -1060,7 +1060,7 @@
                                   their own
                                 </li>
                               </ul>
-                              <div class="contact-host__textarea-container">
+                              <div class="mt-2">
                                 <div class="contact-host__textarea-wrapper">
                                   <div dir="ltr">
                                     <textarea
@@ -1253,7 +1253,7 @@ Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem
                                       </svg>
                                     </div>
                                   </div>
-                                  <div class="place__recommended-no">
+                                  <div class="mt-2">
                                     <div
                                       class="description-textarea__help"
                                       id="experience_duration-InputField-help"
