--- a/account/personal-info.html
+++ b/account/personal-info.html
@@ -396,7 +396,7 @@
                                                 </div>
                                               </label>
                                             </div>
-                                            <div class="place__recommended-no"></div>
+                                            <div class="mt-2"></div>
                                           </div>
                                         </div>
                                         <div class="account-container__menu-field">
@@ -425,7 +425,7 @@
                                                 </div>
                                               </label>
                                             </div>
-                                            <div class="place__recommended-no"></div>
+                                            <div class="mt-2"></div>
                                           </div>
                                         </div>
                                       </div>
@@ -623,7 +623,7 @@
                                             </svg>
                                           </div>
                                         </div>
-                                        <div class="place__recommended-no"></div>
+                                        <div class="mt-2"></div>
                                       </div>
                                     </div>
                                     <div id="airlock-inline-container"></div>
@@ -800,7 +800,7 @@
                                             </div>
                                           </label>
                                         </div>
-                                        <div class="place__recommended-no"></div>
+                                        <div class="mt-2"></div>
                                       </div>
                                     </div>
                                     <div id="airlock-inline-container"></div>
@@ -2036,7 +2036,7 @@
                                                         </div>
                                                       </label>
                                                     </div>
-                                                    <div class="place__recommended-no"></div>
+                                                    <div class="mt-2"></div>
                                                   </div>
                                                 </div>
                                               </div>
@@ -2072,7 +2072,7 @@
                                                         </div>
                                                       </label>
                                                     </div>
-                                                    <div class="place__recommended-no"></div>
+                                                    <div class="mt-2"></div>
                                                   </div>
                                                 </div>
                                               </div>
@@ -2107,7 +2107,7 @@
                                                         </div>
                                                       </label>
                                                     </div>
-                                                    <div class="place__recommended-no"></div>
+                                                    <div class="mt-2"></div>
                                                   </div>
                                                 </div>
                                               </div>
@@ -2143,7 +2143,7 @@
                                                         </div>
                                                       </label>
                                                     </div>
-                                                    <div class="place__recommended-no"></div>
+                                                    <div class="mt-2"></div>
                                                   </div>
                                                 </div>
                                               </div>
@@ -2280,7 +2280,7 @@
                                             </div>
                                           </label>
                                         </div>
-                                        <div class="place__recommended-no"></div>
+                                        <div class="mt-2"></div>
                                       </div>
                                       <div style="margin-top: 16px">
                                         <div>
@@ -2308,7 +2308,7 @@
                                               </div>
                                             </label>
                                           </div>
-                                          <div class="place__recommended-no"></div>
+                                          <div class="mt-2"></div>
                                         </div>
                                       </div>
                                       <div style="margin-top: 16px">
@@ -2540,7 +2540,7 @@
                                               </svg>
                                             </div>
                                           </div>
-                                          <div class="place__recommended-no"></div>
+                                          <div class="mt-2"></div>
                                         </div>
                                       </div>
                                       <div style="margin-top: 16px">
@@ -2567,7 +2567,7 @@
                                               </div>
                                             </label>
                                           </div>
-                                          <div class="place__recommended-no"></div>
+                                          <div class="mt-2"></div>
                                         </div>
                                       </div>
                                       <div class="account-container__menu-container">
@@ -3368,7 +3368,7 @@
                                                   </svg>
                                                 </div>
                                               </div>
-                                              <div class="place__recommended-no"></div>
+                                              <div class="mt-2"></div>
                                             </div>
                                           </div>
                                         </div>
@@ -3399,7 +3399,7 @@
                                                   </div>
                                                 </label>
                                               </div>
-                                              <div class="place__recommended-no"></div>
+                                              <div class="mt-2"></div>
                                             </div>
                                           </div>
                                         </div>
@@ -3780,7 +3780,7 @@
                                                     </div>
                                                   </label>
                                                 </div>
-                                                <div class="place__recommended-no"></div>
+                                                <div class="mt-2"></div>
                                               </div>
                                             </div>
                                             <div class="account-container__menu-field">
@@ -3809,7 +3809,7 @@
                                                     </div>
                                                   </label>
                                                 </div>
-                                                <div class="place__recommended-no"></div>
+                                                <div class="mt-2"></div>
                                               </div>
                                             </div>
                                           </div>
@@ -3974,7 +3974,7 @@
                                                 </svg>
                                               </div>
                                             </div>
-                                            <div class="place__recommended-no"></div>
+                                            <div class="mt-2"></div>
                                           </div>
                                         </div>
                                         <div
@@ -4155,7 +4155,7 @@
                                                 </div>
                                               </label>
                                             </div>
-                                            <div class="place__recommended-no"></div>
+                                            <div class="mt-2"></div>
                                           </div>
                                         </div>
                                         <div
@@ -5913,7 +5913,7 @@
                                                           </label>
                                                         </div>
                                                         <div
-                                                          class="place__recommended-no"
+                                                          class="mt-2"
                                                         ></div>
                                                       </div>
                                                     </div>
@@ -5959,7 +5959,7 @@
                                                           </label>
                                                         </div>
                                                         <div
-                                                          class="place__recommended-no"
+                                                          class="mt-2"
                                                         ></div>
                                                       </div>
                                                     </div>
@@ -6005,7 +6005,7 @@
                                                           </label>
                                                         </div>
                                                         <div
-                                                          class="place__recommended-no"
+                                                          class="mt-2"
                                                         ></div>
                                                       </div>
                                                     </div>
@@ -6051,7 +6051,7 @@
                                                           </label>
                                                         </div>
                                                         <div
-                                                          class="place__recommended-no"
+                                                          class="mt-2"
                                                         ></div>
                                                       </div>
                                                     </div>
@@ -6196,7 +6196,7 @@
                                                 </div>
                                               </label>
                                             </div>
-                                            <div class="place__recommended-no"></div>
+                                            <div class="mt-2"></div>
                                           </div>
                                           <div style="margin-top: 16px">
                                             <div>
@@ -6224,7 +6224,7 @@
                                                   </div>
                                                 </label>
                                               </div>
-                                              <div class="place__recommended-no"></div>
+                                              <div class="mt-2"></div>
                                             </div>
                                           </div>
                                           <div style="margin-top: 16px">
@@ -6456,7 +6456,7 @@
                                                   </svg>
                                                 </div>
                                               </div>
-                                              <div class="place__recommended-no"></div>
+                                              <div class="mt-2"></div>
                                             </div>
                                           </div>
                                           <div style="margin-top: 16px">
@@ -6485,7 +6485,7 @@
                                                   </div>
                                                 </label>
                                               </div>
-                                              <div class="place__recommended-no"></div>
+                                              <div class="mt-2"></div>
                                             </div>
                                           </div>
                                           <div class="account-container__menu-container">
@@ -7633,7 +7633,7 @@
                                                       </svg>
                                                     </div>
                                                   </div>
-                                                  <div class="place__recommended-no"></div>
+                                                  <div class="mt-2"></div>
                                                 </div>
                                               </div>
                                             </div>
@@ -7664,7 +7664,7 @@
                                                       </div>
                                                     </label>
                                                   </div>
-                                                  <div class="place__recommended-no"></div>
+                                                  <div class="mt-2"></div>
                                                 </div>
                                               </div>
                                             </div>
