--- a/account/welcome_back.html
+++ b/account/welcome_back.html
@@ -328,7 +328,7 @@
                                           </div>
                                         </label>
                                       </div>
-                                      <div class="place__recommended-no"></div>
+                                      <div class="mt-2"></div>
                                     </div>
                                     <div>
                                       <div class="spinner-chart__input-price">
@@ -354,7 +354,7 @@
                                           </div>
                                         </div>
                                       </div>
-                                      <div class="place__recommended-no"></div>
+                                      <div class="mt-2"></div>
                                     </div>
                                     <div id="airlock-inline-container" aria-live="polite"></div>
                                     <div class="_wfo3ii">
