--- a/edit/about.html
+++ b/edit/about.html
@@ -649,7 +649,7 @@
                                                   experience?
                                                 </div>
                                               </div>
-                                              <div class="_4l12l8">
+                                              <div class="mt-2">
                                                 <div class="_1aoj0ap">
                                                   <div dir="ltr">
                                                     <textarea
@@ -907,7 +907,7 @@ Hello! My name is Jose and I am from the Philippines! It is a pleasure to host t
                                             </div>
                                           </div>
                                           <div
-                                            class="contact-host__textarea-container"
+                                            class="mt-2"
                                           >
                                             <div
                                               class="contact-host__textarea-wrapper"
