--- a/listings-product/products.html
+++ b/listings-product/products.html
@@ -10827,7 +10827,7 @@
                                                                 </span>
                                                               </div>
                                                             </div>
-                                                            <div class="place__recommended-no">
+                                                            <div class="mt-2">
                                                               <span class="_1y9gwt75"><span
                                                                   class="products-container__mb-footer-rate-star" style="
                                                                       font-size: 12px;
@@ -13321,7 +13321,7 @@
                                                                 </span>
                                                               </div>
                                                             </div>
-                                                            <div class="place__recommended-no">
+                                                            <div class="mt-2">
                                                               <span class="_1y9gwt75"><span
                                                                   class="products-container__mb-footer-rate-star" style="
                                                                       font-size: 12px;
@@ -13815,7 +13815,7 @@
                                                                 </span>
                                                               </div>
                                                             </div>
-                                                            <div class="place__recommended-no">
+                                                            <div class="mt-2">
                                                               <span class="_1y9gwt75"><span
                                                                   class="products-container__mb-footer-rate-star" style="
                                                                       font-size: 12px;
