--- a/submission/about.html
+++ b/submission/about.html
@@ -1054,7 +1054,7 @@
                                         How are you hosting this experience?
                                       </div>
                                     </legend>
-                                    <div class="place__recommended-no">
+                                    <div class="mt-2">
                                       <label
                                         for="info_best_describe_you_and_experience-I’m hosting by myself"
                                         class="flex"
@@ -1074,7 +1074,7 @@
                                         ></label
                                       >
                                     </div>
-                                    <div class="place__recommended-no">
+                                    <div class="mt-2">
                                       <label
                                         for="info_best_describe_you_and_experience-I have a team who helps me host"
                                         class="flex"
@@ -1193,7 +1193,7 @@
                                   experience?
                                 </div>
                               </div>
-                              <div class="contact-host__textarea-container">
+                              <div class="mt-2">
                                 <div class="contact-host__textarea-wrapper">
                                   <div dir="ltr">
                                     <textarea
