--- a/submission/expertise.html
+++ b/submission/expertise.html
@@ -1104,7 +1104,7 @@
                                         Have you hosted this activity before?
                                       </div>
                                     </legend>
-                                    <div class="place__recommended-no">
+                                    <div class="mt-2">
                                       <label
                                         for="info_previously_hosted_activity-Yes, I’ve hosted or taught this activity professionally"
                                         class="flex"
@@ -1125,7 +1125,7 @@
                                         ></label
                                       >
                                     </div>
-                                    <div class="place__recommended-no">
+                                    <div class="mt-2">
                                       <label
                                         for="info_previously_hosted_activity-Yes, I’ve hosted this activity informally for friends or family"
                                         class="flex"
@@ -1145,7 +1145,7 @@
                                         ></label
                                       >
                                     </div>
-                                    <div class="place__recommended-no">
+                                    <div class="mt-2">
                                       <label
                                         for="info_previously_hosted_activity-No, I’ve never hosted this activity before"
                                         class="flex"
