--- a/submission/guestReq.html
+++ b/submission/guestReq.html
@@ -1166,7 +1166,7 @@
                                       </div>
                                       <div class="tab__header-desc"></div>
                                     </legend>
-                                    <div class="contact-host__textarea-container">
+                                    <div class="mt-2">
                                       <div
                                         id="Tag:4804"
                                         aria-disabled="false"
@@ -1211,7 +1211,7 @@
                                         ></label>
                                       </div>
                                     </div>
-                                    <div class="contact-host__textarea-container">
+                                    <div class="mt-2">
                                       <div
                                         id="Tag:4802"
                                         aria-disabled="false"
@@ -1258,7 +1258,7 @@
                                         ></label>
                                       </div>
                                     </div>
-                                    <div class="contact-host__textarea-container">
+                                    <div class="mt-2">
                                       <div
                                         id="Tag:4805"
                                         aria-disabled="false"
@@ -1483,7 +1483,7 @@
                                       Additional requirements (optional)
                                     </div>
                                   </div>
-                                  <div class="contact-host__textarea-container">
+                                  <div class="mt-2">
                                     <div class="contact-host__textarea-wrapper">
                                       <div dir="ltr">
                                         <textarea
